Пустое апи с бандлами

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,20 +1,42 @@
 server {
     listen 80;
-    index index.php index.html;
+    server_name localhost;
+    root /var/www/public;
+    index index.php;
+
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www;
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
+
+    # Handle Symfony routes
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
+        try_files $uri /index.php$is_args$args;
     }
+
+    # Handle PHP files
+    location ~ ^/index\.php(/|$) {
+        fastcgi_pass app:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param HTTPS off;
+        fastcgi_param HTTP_PROXY "";
+        internal;
+    }
+
+    # Deny access to .htaccess files
+    location ~ /\.ht {
+        deny all;
+    }
+
+    # Deny access to sensitive files
+    location ~ /\.(env|git) {
+        deny all;
+    }
+
+    # Enable gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 }
