--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
-.docker
+# Environment files
 .env
+.env.local
+.env.*.local
+
+# Docker
+.docker
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Cache
+var/cache/
+var/log/
+var/sessions/
+
+# Vendor (if not using Docker)
+# vendor/
+
+# Temporary files
+*.tmp
+*.temp
