--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,70 @@
-version: "3.8"
 services:
+  # PHP-FPM
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: php-app
+    working_dir: /var/www
+    volumes:
+      - ./www:/var/www
+    environment:
+      XDEBUG_MODE: debug
+    depends_on:
+      - db
+      - redis
+    networks:
+      - app-network
 
-    # PHP service
-    app:
-        build: .
-        container_name: php-app
-        working_dir: /var/www/
-        volumes:
-            - ./:/var/www
-        networks:
-            - app-network
+  # PostgreSQL 16 with pgvector
+  db:
+    image: pgvector/pgvector:pg16
+    container_name: postgres-db
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    env_file:
+      - .env
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
-    # MySQL database service
-    db:
-        image: mysql:5.7
-        container_name: mysql-db
-        ports:
-            - "3306:3306"
-        environment:
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-            MYSQL_DATABASE: ${DB_DATABASE}
-            MYSQL_USER: ${DB_USERNAME}
-            MYSQL_PASSWORD: ${DB_PASSWORD}
-        env_file:
-            - ./.env
-        networks:
-            - app-network
+  # Redis
+  redis:
+    image: redis:7-alpine
+    container_name: redis-cache
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - app-network
 
-    # Nginx service
-    nginx:
-        image: nginx:alpine
-        container_name: php-nginx
-        ports:
-            - 8000:80
-        volumes:
-            - ./:/var/www
-            - ./nginx/conf.d/:/etc/nginx/conf.d/
-        networks:
-            - app-network
+  # Nginx (Alpine)
+  nginx:
+    image: nginx:stable-alpine
+    container_name: php-nginx
+    restart: always
+    ports:
+      - "8000:80"
+    volumes:
+      - ./www:/var/www
+      - ./nginx/conf.d:/etc/nginx/conf.d
+    depends_on:
+      - app
+    networks:
+      - app-network
+
+volumes:
+  db_data:
+  redis_data:
 
 networks:
-    app-network:
-        driver: bridge
+  app-network:
+    driver: bridge
